--- a/business/src/app/globals.css
+++ b/business/src/app/globals.css
@@ -5,8 +5,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-montserrat: var(--font-montserrat);
   --font-plus-jakarta-sans: var(--font-plus-jakarta-sans);
+  --font-tomato: var(--font-tomato);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
